# pimpumpam

./: .gitignore  README.md  flake.nix  pyproject.toml
electron/: .gitignore  main.js  package.json
src/pimpumpam/: __main__.py  app.py  caldav_client.py  carddav_client.py  config.py  deps.py  errors.py  ical.py  models.py  pool.py  stats.py  store.py  vcard.py
src/pimpumpam/routers/: __init__.py  accounts.py  addressbooks.py  calendars.py  contacts.py  events.py  todos.py
tests/: conftest.py  test_accounts.py  test_addressbooks.py  test_calendars.py  test_concurrency.py  test_contacts.py  test_errors.py  test_etag.py  test_events.py  test_extras.py  test_override.py  test_recurrence.py  test_roundtrip.py  test_todos.py  test_validation.py
ui/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
ui/e2e/: app.spec.ts  stack.py
ui/src/: App.tsx  notifications.ts  styles.css  theme.ts
ui/src/api/: client.ts  types.ts
ui/src/components/: AccountModal.tsx  CalendarEditModal.tsx  HelpModal.tsx  Modal.tsx  NewCollectionModal.tsx  Sidebar.tsx  Topbar.tsx
ui/src/components/calendar/: AgendaView.tsx  EventsListView.tsx  MonthView.tsx  TimeGridView.tsx
ui/src/components/drawer/: ContactDrawer.tsx  Drawer.tsx  EventDrawer.tsx  RecurrenceBuilder.tsx
ui/src/state/: store.ts
ui/src/utils/: date.ts  ics.ts  listnav.ts  occurrences.ts  rrule.ts
ui/src/views/: CalendarView.tsx  ContactsView.tsx
