[project]
name = "pimpumpam"
version = "0.1.0"
description = "A REST application that is a full CalDAV and CardDAV client"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "caldav>=1.3",
    "icalendar>=5.0",
    "recurring-ical-events>=2.1",
    "vobject>=0.9.6",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "lxml>=5.0",
]

[project.scripts]
pimpumpam = "pimpumpam.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "radicale>=3.1",
    "xandikos>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pimpumpam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
